feat: add contact section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="https://cdn.discordapp.com/attachments/895300373911314483/1133757883356549230/phonto.png?ex=652fe24f&is=651d6d4f&hm=7cc6020773b77fa83605b47821c9f735e31b12f0d1bd0bd7972780c81aedc8ea&"
+      href="https://cdn.discordapp.com/attachments/1144637676016898219/1162030327775105024/Screenshot_2023-10-12_211311.jpg?ex=653a7413&is=6527ff13&hm=ce4f900635cf215a04e3d9ddfbbcf8f778cf1b9636efc7c667e1c6c3300e37bf&"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MYNTCODE</title>
